--- a/index.html
+++ b/index.html
@@ -17,28 +17,33 @@
 			*::after,
 			*::before {
 				box-sizing: border-box;
+				margin: 0;
+				padding: 0;
 			}
-
 			body {
+				display: flex;
 				font-family: Arial, Helvetica, sans-serif;
 				font-size: 1rem;
 				line-height: 1.5;
 				color: #333;
-				margin: 0;
-				padding: 0;
 				background: #f5f5f5;
+				height: 100vh;
+				justify-content: center;
 			}
 			@media screen and (min-width: 768px) {
-				body {
-					display: flex;
+/* 				body {
 					flex-direction: column;
 					justify-content: center;
 					align-items: center;
-				}
+					min-height: 100%;
+					height: 100%;
+				} */
 			}
 			.container {
 				width: 400px;
-				/* margin: 0 auto; */
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
 			}
 			.heading {
 				text-align: center;
@@ -46,7 +51,7 @@
 				margin-bottom: 20px;
 				text-transform: uppercase;
 				color: #473f6e;
-				font-size: 1.2rem;
+				font-size: .9rem;
 			}
 			form {
 				display: flex;
@@ -64,7 +69,7 @@
 				font-family: Arial, Helvetica, sans-serif;
 				font-size: 14px;
 				line-height: 1.5;
-				color: #bdbacb;
+				color: rgb(93, 71, 200);
 				margin: 0;
 				margin-bottom: 20px;
 				padding: 10px 20px;
@@ -78,6 +83,16 @@
 				height: 100px;
 				resize: none;
 				border-radius: 10px;
+			}
+			::placeholder {
+				color: #bdbacb;
+			}
+			input[type="text"]:focus,
+			input[type="email"]:focus,
+			textarea:focus{
+				outline: none;
+				border: 1px solid rgb(93, 71, 200);
+				color: rgb(93, 71, 200);
 			}
 			.btn {
 				background-color: #817ffe;
@@ -93,17 +108,18 @@
 				cursor: pointer;
 				text-transform: uppercase;
 			}
-			.thank-you {
-				/* display:none; */
+			.thank-you-wrapper {
 				text-align: center;
-				margin-top: 20px;
-				margin-bottom: 20px;
-				text-transform: uppercase;
-				color: #1c6630;
-				font-size: 1.2rem;
-				background-color: #fff;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+			}
+			.thank-you-body {
+				background-color: rgb(5, 173, 84);
 				padding: 20px;
 				border-radius: 10px;
+				color: #fff;
+				border: 1px solid  rgb(4, 143, 69);
 			}
 		</style>
 	</head>
@@ -112,7 +128,7 @@
 			<h1 class="heading">SEND US A MESSAGE</h1>
 			<form action="#" id="messages" OnSubmit="sendMessage(event)">
 				<input type="text" required id="name" placeholder="Full name" />
-				<input type="text" required id="email" placeholder="E-mail" />
+				<input type="email" required id="email" placeholder="E-mail" />
 				<input type="text" id="phone" placeholder="Phone" />
 				<textarea
 					id="message"
@@ -131,6 +147,7 @@
 				event.preventDefault();
 				let sender = messages.name.value;
 				let message = messages.message.value;
+
 				try {
 					let results = await fetch("/messages", {
 						method: "POST",
@@ -143,6 +160,7 @@
 						}),
 					});
 					document.querySelector(".container").style.display = "none";
+					// document.querySelector(".container").remove();
 					let data = await results.json();
 					messages.message.value = "";
 					messages.name.value = "";
@@ -150,26 +168,28 @@
 				} catch (err) {
 					console.log(err);
 				}
-                thankYou()
+
+                MyResponse()
+
 				console.log(`Full name ${sender} Message ${message}`);
 				// alert(`Full name ${sender} \r\nMessage ${message}`);
 			};
 
-			function thankYou() {
-				const thankyou = document.createElement("div");
-				thankyou.classList.add("thank-you");
-				const thankYouHeading = document.createElement(
-					"h1"
-				);
-                thankYouHeading.innerText = "Thank you for your submission!"
-				const thankYouBody = document.createElement(
-					"p"
-				);
-                thankYouBody.innerText = "We will be in touch with you shortly."
-				thankyou.appendChild(thankYouHeading);
-				thankyou.appendChild(thankYouBody);
+			function MyResponse() {
 
-				document.body.appendChild(thankyou);
+				const wrapper = document.createElement("section");
+				wrapper.classList.add("thank-you-wrapper");
+
+				const theBody = document.createElement("div");
+				theBody.classList.add("thank-you-body");
+
+				theBody.innerHTML = `
+					<h1>Hi ${messages?.name?.value.split(' ')[0]}! <br/>Thank you for your message.</h1>
+					<p>We will get back to you as soon as possible.</p>
+				`;
+
+				wrapper.appendChild(theBody);
+				document.body.appendChild(wrapper);
 			}
 		</script>
 	</body>
